docs/microservices/MS13-SECURITY/kubernetes/keycloak-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms13-security-keycloak-exporter
  namespace: zenia
  labels:
    app: ms13-security-keycloak-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms13-security-keycloak-exporter
  template:
    metadata:
      labels:
        app: ms13-security-keycloak-exporter
    spec:
      containers:
      - name: keycloak-exporter
        image: quay.io/bitnami/keycloak-exporter:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
      automountServiceAccountToken: false
